feat: Update Swapi configs

--- a/airflow/dags/configs/swapi_configs.json
+++ b/airflow/dags/configs/swapi_configs.json
@@ -1,23 +1,32 @@
 {
-    "save_path": "/opt/airflow/data/swapi/raw",
-    "routes": [
-        {
+    "work": {
+        "people": {
             "name": "people",
             "label": "Personagens",
-            "url": "https://swapi.dev/api/people?page={page}",
-            "path": "{base}/people/{datetime}_people.json"
+            "url": "people_endpoint",
+            "raw_path": "{base}/people/{datetime}_people.json",
+            "meta_path": "/swapi/meta/people.csv",
+            "work_path": "/people.csv"
         },
-        {
+        "planets": {
             "name": "planets",
             "label": "Planetas",
-            "url": "https://swapi.dev/api/planets?page={page}",
-            "path": "{base}/planets/{datetime}_planets.json"
+            "url": "planets_endpoint",
+            "raw_path": "{base}/planets/{datetime}_planets.json",
+            "meta_path": "/swapi/meta/planets.csv",
+            "work_path": "/planets.csv"
         },
-        {
+        "films": {
             "name": "films",
             "label": "Filmes",
-            "url": "https://swapi.dev/api/films?page={page}",
-            "path": "{base}/films/{datetime}_films.json"
+            "url": "films_endpoint",
+            "raw_path": "{base}/films/{datetime}_films.json",
+            "meta_path": "/swapi/meta/films.csv",
+            "work_path": "/films.csv"
         }
-    ]
+    },
+    "dw": {
+        "meta_path": "dw_meta_path",
+        "dw_path": "dw_path"
+    }
 }
